# AppInstaller_Rust

./: Cargo.toml  README.md
src/: install_utils.rs  main.rs  zip_utils.rs
