[package]
name = "AppInstaller"
version = "0.1.0"
edition = "2024"

[dependencies]
clipboard = "0.5.0"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }
winapi = { version = "0.3.9", features = ["winuser", "shellapi", 
        "knownfolders", "shlobj", "winerror", "objbase", "ole2", "combaseapi"]}
chrono = "0.4"
mslnk = "0.1.2"
sysinfo = "0.29"
miniz_oxide = "0.8.4"
flate2 = "1.0.30"
once_cell = "1.18"
#zip = "0.6.6"

[profile.release]
opt-level = 'z'    # Optimize for size
lto = true         # Enable Link Time Optimization
codegen-units = 1  # Reduce parallel code generation units to increase optimization
panic = 'abort'    # Remove stack unwinding code on panic
strip = true       # Strip symbols from binary
