[package]
name = "AppInstaller"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = { version = "1.4", features = ["fltk-bundled"] }
chrono = "0.4"
sysinfo = "0.29"
flate2 = "1.0.30"
miniz_oxide = "0.7.2"
clipboard = "0.5.0"
dirs = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true