[package]
name = "AppInstaller"
version = "0.1.0"
edition = "2024"

[dependencies]
native-windows-gui = { version = "1.0.13", features = ["flexbox", 
        "progress-bar"] }
native-windows-derive = "1.0.5"
chrono = "0.4"
sysinfo = "0.29"
winapi = { version = "0.3.9", features = ["winuser", "shellapi", 
        "knownfolders", "shlobj", "winerror", "objbase", "ole2", "combaseapi"]}
mslnk = "0.1.8"
parselnk = "0.1.0"
miniz_oxide = "0.8.4"
flate2 = "1.0.30"
once_cell = "1.18"

[build-dependencies]
embed-resource = "1.7.1"
